--- a/winnie/web/static/index.html
+++ b/winnie/web/static/index.html
@@ -40,15 +40,13 @@
                 <div class="choices">
                     <h2>Explain the options</h2>
                     <ul class="items">
-                        <li>Option One</li>
-                        <li>Option Two</li>
+                        <li>Getting channel list...</li>
                     </ul>
                 </div>
                 
                 <div class="watch output fixed">
                     <ul class="items">
-                        <li>Item One</li>
-                        <li>Item Two</li>
+                        <li>No channel selected.</li>
                     </ul>
                 </div>
 
