--- a/winnie/web/static/index.html
+++ b/winnie/web/static/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" type="text/css" media="screen" href="http://www.blueprintcss.org/blueprint/src/typography.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="/static/style.css" />
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+        <script src="https://www.google.com/jsapi"></script>
+        <script> google.load('jquery', '1.3.1'); </script>
+
         <script type="text/javascript" src="/static/winnie.js"></script>
 
         <script type="text/javascript">
