fixed winnies stupid theme

--- a/index.html
+++ b/index.html
@@ -1,56 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Winnie : Intelligence." />
+  <title>dotfiles - The ultimate in functionality.</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+       <link href='http://fonts.googleapis.com/css?family=Open+Sans:600|Montserrat:700' rel='stylesheet' type='text/css'>
 
-    <title>Winnie</title>
-  </head>
 
-  <body>
+<link href="stylesheets/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jmkogut/winnie">View on GitHub</a>
 
-          <h1 id="project_title">Winnie</h1>
-          <h2 id="project_tagline">Intelligence.</h2>
+  <!-- Meta -->
+  <meta content="dotfiles" property="og:title">
+  <meta content="srs advanced business." name="description">
+<!--
+  <script type="text/javascript" src="script/dotfiles.js"></script>
+  -->
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jmkogut/winnie/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jmkogut/winnie/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+</head>
+<body>
+
+
+    <div class="header">
+        <nav>
+        <ul>
+            <li>home</li>
+            <li>features</li>
+            <li>shit</li>
+            <li>musings</li>
+            <li>credits</li>
+        </ul>
+        </nav>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="winnie" class="anchor" href="#winnie"><span class="octicon octicon-link"></span></a>winnie</h1>
 
-<p>winnie is an IRC bot. She sits and waits for people to make statements, "this car is fast," "you are a fatass," "I have a rash."</p>
-
-<p>She will then spit out these statements in conversation later whenever appropriate.</p>
-
-<p>There is a markov functionality as well for increased amusement.</p>
-      </section>
+    <div class="image">
+        <h1>much wow, such oblige</h1>
+        <p>How did I even get inside of here.</p>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Winnie maintained by <a href="https://github.com/jmkogut">jmkogut</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+
+    <p>You're siwwy.</p>
+
+
+    <div class="row">
+        <div class="item left">
+            <p>winnie doesn't really have much going for her.
+            You'll have to be polite while she tries to figure
+            out how to be alive again. I regret to inform you
+            her being has experienced a fair bit of
+            neglect.</p>
+        </div>
+
+
+        <div class="item center">
+            <p>BUZZ WORDS COCK FANGLE DANGLE MAGIC JACK RICE CRISPIES BUTT CLOUD IRC
+            TAG WORDS. You don't know Jack, says my lorum ipsum instructor. Get fucked,
+            <em>royally</em>.</p>
+        </div>
+
+
+
+        <div class="item right">
+            <p>
+winnie is an IRC bot. She sits and waits for people to make statements, "this car is fast," "you are a fatass," "I have a rash." Everything that gets said over the period in which she observes a channel is recorded. Meticulously. Using the natural language processing toolkit ^1, she can analyse english on a really, really mediocre level.
+
+            
+            </p>
+        </div>
     </div>
 
-    
-
-  </body>
+</body>
 </html>
