--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <link href='http://fonts.googleapis.com/css?family=Open+Sans:600|Montserrat:700' rel='stylesheet' type='text/css'>
 
 
-<link href="stylesheets/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
+<link href="main.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
 
   <!-- Meta -->
